# learning-cloud

./: .gitignore  README.md
ai/: .swp
ai/kcs-test1/: README.md  agent.py  api.py  main.py  models.py  prompt.txt  pyproject.toml  requirements.txt  streamlit_app.py  uv_commands.txt
cloudformation/: aags-awesome.yaml  run_cw.bash  testapigw.yaml  testec2s.yaml
devops-scripts/: nominis-bashrc
doc/: command_to_kill.txt
kcsexample.com/: index.html
lambda/: MyLambdaFunction.py  calapigw.py  testlambda.py
sql/: list_sys_n_obj_privs_of_a_user.sql  mssql_check_if_always_encrypted_is_used.sql  mssql_check_if_cell_level_encryption_is_used.sql  mssql_check_if_connection_encryption_is_used.sql  mssql_check_if_tde_is_enabled.sql  mssql_db_size1.sql  mssql_get_instance_server_info.sql  pg_active_sessions_per_user.sql  pg_activity_by_user.sql  pg_age_of_txns.sql  pg_all_autovacuum_params.sql  pg_check_recovery_status.sql  pg_check_system_processes.sql  pg_currently_running_queries.sql  pg_get_execution_plan.sql  pg_get_sessions_with_longer_idle_in_txn.sql  pg_get_table_details.sql  pg_list_db_triggers.sql  pg_list_indexes_of_a_table.sql  pg_list_long_running_queries.sql  pg_list_of_tables_with_more_than_60_dead_tuples.sql  pg_potential_table_bloat.sql  pg_quick_bloat_estimate.sql  pg_quick_bloat_estimate2.sql  pg_resetpwd_template.sql  pg_sessions_summary.sql  pg_show_active_processes.sql  pg_show_pg_version.sql  pg_show_table_structure.sql  pg_show_top_10_sqls_by_cpu.sql  pg_show_top_10_sqls_by_io.sql  pg_show_top_10_tables_by_size.sql  pg_show_top_5_sqls_by_cpu.sql  (+8 more)
(+220 files in other folders)
